[gd_scene load_steps=12 format=3 uid="uid://bu3kbmuscj6jk"]

[ext_resource type="Script" path="res://phase3_fly/player_mongolfiere.gd" id="1_g8byh"]
[ext_resource type="Script" path="res://phase3_fly/obstacle_generator.gd" id="2_8v5we"]
[ext_resource type="Script" path="res://phase3_fly/blink_script.tres.gd" id="2_ruy3v"]
[ext_resource type="Texture2D" uid="uid://tfrb6fm2t5w" path="res://icon.svg" id="3_n6avf"]
[ext_resource type="Script" path="res://phase3_fly/on_body_entered.gd" id="3_t4plq"]
[ext_resource type="PackedScene" uid="uid://o21sqmg4irpd" path="res://phase3_fly/obstacles/teacup.tscn" id="6_c7py6"]

[sub_resource type="SphereMesh" id="SphereMesh_i555y"]
radius = 1.0
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_obln0"]
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_yirfx"]
size = Vector3(7.3125, 6.17957, 5.52637)

[sub_resource type="SphereShape3D" id="SphereShape3D_t70nq"]
radius = 1.18378

[sub_resource type="BoxShape3D" id="BoxShape3D_2heeh"]
size = Vector3(6.6416, 64.0088, 23.9658)

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 47.929)
fov = 30.0

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.0999, 0, 0)
script = ExtResource("1_g8byh")
acceleration_factor = 0.315

[node name="Bubble" type="MeshInstance3D" parent="Player"]
mesh = SubResource("SphereMesh_i555y")
script = ExtResource("2_ruy3v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("SphereShape3D_obln0")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.9647, 14.7933, 0)
shape = SubResource("BoxShape3D_yirfx")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.7552, -14.5726, 0)
shape = SubResource("BoxShape3D_yirfx")

[node name="Obstacles" type="Node3D" parent="."]
script = ExtResource("2_8v5we")
spawn_distance = 12.0

[node name="obstacle_instances" type="Node3D" parent="Obstacles"]

[node name="Mouse" type="Area3D" parent="Obstacles/obstacle_instances"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.9143, -0.228726, -1.90735e-06)

[node name="OnBodyAreaEntered" type="Node3D" parent="Obstacles/obstacle_instances/Mouse"]
script = ExtResource("3_t4plq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacles/obstacle_instances/Mouse"]
shape = SubResource("SphereShape3D_t70nq")

[node name="Sprite3D" type="Sprite3D" parent="Obstacles/obstacle_instances/Mouse"]
transform = Transform3D(1.61099, 0, 0, 0, 1.61099, 0, 0, 0, 1.61099, 0, 0, 0)
texture = ExtResource("3_n6avf")

[node name="Teacup" parent="Obstacles/obstacle_instances" instance=ExtResource("6_c7py6")]

[node name="DestroyObstacle" type="Area3D" parent="Obstacles"]

[node name="DestroyObstacleBody" type="CollisionShape3D" parent="Obstacles/DestroyObstacle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.4563, 0, 0)
shape = SubResource("BoxShape3D_2heeh")

[node name="spawn" type="Marker3D" parent="Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.9087, -6.82076, 0)

[connection signal="area_entered" from="Obstacles/obstacle_instances/Mouse" to="Obstacles/obstacle_instances/Mouse/OnBodyAreaEntered" method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Obstacles/obstacle_instances/Mouse" to="Obstacles/obstacle_instances/Mouse/OnBodyAreaEntered" method="_on_body_entered"]
